--- a/src/main/webapp/app/scripting/scripting-update-dialog.html
+++ b/src/main/webapp/app/scripting/scripting-update-dialog.html
@@ -4,13 +4,13 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="myProjectLabel">Add a new cue</h4>
+        <h4 class="modal-title" id="myProjectLabel">Update cue</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
         <div class="form-group">
             <label class="control-label" for="field_cameraAction">Camera action</label>
-            <input type="text" class="form-control" name="cameraAction" id="field_cameraAction" ng-model="vm.cue.name" />
+            <input type="text" class="form-control" name="cameraAction" id="field_cameraAction" ng-model="vm.cue.name" ng-value="cuename" />
         </div>
     </div>
     <div class="modal-footer">
