--- a/src/main/webapp/app/live/live.html
+++ b/src/main/webapp/app/live/live.html
@@ -3,8 +3,8 @@
         <h1 class="text-center">Live Preview</h1>
 
         <div class="row">
-            <div class="col-lg-10 table-responsive">
-                <table class="table table-striped">
+            <div class="col-lg-12 table-responsive">
+                <table class="table table-striped table-responsive">
                     <thead>
                     <tr>
                         <th>User</th>
@@ -25,16 +25,12 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-lg-2">
-                <button type="button" class="btn btn-raised btn-danger" ng-click="vm.previous()">Previous</button>
-                <button type="button" class="btn btn-raised btn-success" ng-click="vm.next()">Next</button>
-            </div>
         </div>
         <br />
 
         <div id="vertical-timeline" class="col-lg-offset-2 col-lg-8">
-            <ul class="timeline">
-                <li ng-class-even="'timeline-inverted'" ng-repeat="cue in vm.cues | orderBy:'timePoint.startTime'">
+            <ul id="timeline-ul" class="timeline">
+                <li id="{{$index}}" ng-class-even="'timeline-inverted'" ng-repeat="cue in vm.cues | orderBy:'timePoint.startTime'">
                     <div class="timeline-badge" ng-class="'timeline-badge' + ($index % 3 + 1)"><i class="glyphicon glyphicon-map-marker text-center"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -66,4 +62,9 @@
             </ul>
         </div>
     </div>
+</div>
+
+<div style="position: fixed; bottom: 0px; right: 0px;">
+    <button type="button" class="btn btn-raised btn-danger" ng-click="vm.previous()">Previous</button>
+    <button type="button" class="btn btn-raised btn-success" ng-click="vm.next()">Next</button>
 </div>
