--- a/src/main/webapp/app/live/live.html
+++ b/src/main/webapp/app/live/live.html
@@ -32,7 +32,7 @@
             <ul id="timeline-ul" class="timeline">
                 <li ng-class-even="'timeline-inverted'" ng-repeat="cue in vm.cues | orderBy:'timePoint.startTime'">
                     <div class="timeline-badge" ng-class="'timeline-badge' + ($index % 3 + 1)"><i class="glyphicon glyphicon-map-marker text-center"></i></div>
-                    <div id="{{$index}}" class="timeline-panel">
+                    <div id="{{$index}}" class="timeline-panel" ng-class="{'timeline-focus':$first}">
                         <div class="timeline-heading">
                             <h4 class="timeline-title">{{cue.cameraAction.name}}</h4>
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> From bar {{cue.timePoint.startTime}} to bar {{cue.timePoint.startTime + cue.timePoint.duration}}</small></p>
