--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -7,7 +7,7 @@
 <table class="table table-hover">
     <thead>
     <tr>
-        <th colspan="3"><b>Cameras</b></th>
+        <th colspan="3"><h3>Cameras</h3></th>
     </tr>
     </thead>
     <tbody>
@@ -51,7 +51,7 @@
 <table class="table table-hover">
     <thead>
     <tr>
-        <th colspan="3"><b>Players</b></th>
+        <th colspan="3"><h3>Players</h3></th>
     </tr>
     </thead>
     <tbody>
