--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -14,7 +14,7 @@
     <tr ng-repeat-start="camera in vm.map.cameras"
         ng-click="vm.setSelected(camera)"
         ng-class="{ 'success': vm.selected == camera }">
-        <td colspan="2"><h4 class="text-muted">{{camera.name}}</h4></td>
+        <td colspan="2"><h4 class="text-muted"><i class="glyphicon glyphicon-facetime-video"></i> &nbsp; {{camera.name}}</h4></td>
         <td class="text-right">
             <div class="btn-group flex-btn-group-container">
                 <button type="submit"
@@ -30,12 +30,8 @@
     <tr class="info" ng-repeat-end>
         <td colspan="3" style="padding-top: 0; padding-bottom: 0">
             <div uib-collapse="vm.selected != camera">
-                <p>id: {{camera.id}}</p>
-                <p>x: {{camera.x | number: 2}}</p>
-                <p>y: {{camera.y | number: 2}}</p>
-                <p>angle: {{camera.angle | number: 2}}</p>
-                <p>type: {{camera.cameraType}}</p>
-                <p>lens: {{camera.lensType}}</p>
+                <p><i class="glyphicon glyphicon-camera"></i> &nbsp; Type: {{camera.cameraType}}</p>
+                <p><i class="glyphicon glyphicon-eye-open"></i> &nbsp; Lens: {{camera.lensType}}</p>
             </div>
         </td>
     </tr>
@@ -59,7 +55,7 @@
         ng-click="vm.setSelected(player)"
         ng-class="{ 'success': vm.selected == player }">
         <!--<td>{{player.id}}</td>-->
-        <td colspan="2"><h4 class="text-muted">{{player.name}}</h4></td>
+        <td colspan="2"><h4 class="text-muted"><i class="glyphicon glyphicon-user"></i> &nbsp; {{player.name}}</h4></td>
         <td class="text-right">
             <div class="btn-group flex-btn-group-container">
                 <button type="submit"
@@ -76,9 +72,6 @@
         <!--<tr ng-repeat-end uib-collapse="false">-->
         <td colspan="3" style="padding-top: 0; padding-bottom: 0">
             <div uib-collapse="vm.selected != player">
-                <p>id: {{player.id}}</p>
-                <p>x: {{player.x | number: 2}}</p>
-                <p>y: {{player.y | number: 2}}</p>
             </div>
         </td>
     </tr>
