--- a/src/main/webapp/app/entities/script/scripts.html
+++ b/src/main/webapp/app/entities/script/scripts.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="script.new" >
+                <button class="btn btn-primary" has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR" ui-sref="script.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
                         Create new Script
@@ -37,13 +37,13 @@
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
-                            <button type="submit"
+                            <button type="submit" has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
                                     ui-sref="script.edit({id:script.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
-                            <button type="submit"
+                            <button type="submit" has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
                                     ui-sref="script.delete({id:script.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
